# puzzle-solver

./: .gitignore
backend/sudoku/: Cargo.toml
backend/sudoku/dataset/: labels.jsonl
backend/sudoku/grid-cutter/: Cargo.toml
backend/sudoku/solver/: Cargo.toml
backend/sudoku/solver/benches/: solver_algs.rs
backend/sudoku/solver/src/: dfs.rs  lib.rs  solver.rs  stochastic.rs  sudoku.rs
backend/sudoku/train/synthgen/: Cargo.toml
backend/sudoku/train/synthgen/src/: fonts.rs  generator.rs  geom.rs  io.rs  main.rs  record.rs  render.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  index.css  index.tsx
web/src/components/: RootLayout.tsx  Routes.tsx  SudokuUploader.tsx
web/src/pages/: Home.tsx  Sudoku.tsx
