[package]
name = "synthgen"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
anyhow = "1.0.99"
image = "0.25.6"
imageproc = "0.25.0"
once_cell = "1.21.3"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
rusttype = "0.9.3"
serde = "1.0.219"
serde_json = "1.0.143"
solver = { version = "0.1.0", path = "../../solver" }
ttf-parser = "0.25.1"
